--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "typewriter-effect": "^2.19.0",
     "uniqid": "^5.4.0",
